crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__missing-intent-f95_C061.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C061 function argument 'a' missing 'intent' attribute
  --> ./resources/test/fixtures/correctness/C061.f90:11:16
   |
 9 |   integer function foo(a, b, c, p)
10 |     use mod
11 |     integer :: a, c(2), f
   |                ^
12 |     integer, intent(in), contiguous :: b(:)
13 |     procedure(sub) :: p         ! must not have `intent`
   |

C061 function argument 'c' missing 'intent' attribute
  --> ./resources/test/fixtures/correctness/C061.f90:11:19
   |
 9 |   integer function foo(a, b, c, p)
10 |     use mod
11 |     integer :: a, c(2), f
   |                   ^^^^
12 |     integer, intent(in), contiguous :: b(:)
13 |     procedure(sub) :: p         ! must not have `intent`
   |

C061 subroutine argument 'e' missing 'intent' attribute
  --> ./resources/test/fixtures/correctness/C061.f90:18:29
   |
16 |   subroutine bar(d, e, f)
17 |     integer, pointer :: d
18 |     integer, allocatable :: e(:, :)
   |                             ^^^^^^^
19 |     type(integer(kind=int64)), intent(inout) :: f
20 |     integer :: g
   |
