crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__missing-intrinsic_C122.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C122 [*] 'use' for intrinsic module missing 'intrinsic' modifier
 --> ./resources/test/fixtures/correctness/C122.f90:2:5
  |
1 | module my_module
2 |     use iso_fortran_env
  |     ^^^^^^^^^^^^^^^^^^^
3 |     use my_other_module
4 |     use :: iso_fortran_env, only: real32
  |
help: Add 'intrinsic'
1 | module my_module
  -     use iso_fortran_env
2 +     use, intrinsic :: iso_fortran_env
3 |     use my_other_module
4 |     use :: iso_fortran_env, only: real32
5 |     use, intrinsic :: iso_c_binding
note: This is an unsafe fix and may change runtime behavior

C122 [*] 'use' for intrinsic module missing 'intrinsic' modifier
 --> ./resources/test/fixtures/correctness/C122.f90:4:5
  |
2 |     use iso_fortran_env
3 |     use my_other_module
4 |     use :: iso_fortran_env, only: real32
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |     use, intrinsic :: iso_c_binding
6 |     use, non_intrinsic :: iso_c_binding
  |
help: Add 'intrinsic'
1 | module my_module
2 |     use iso_fortran_env
3 |     use my_other_module
  -     use :: iso_fortran_env, only: real32
4 +     use, intrinsic :: iso_fortran_env, only: real32
5 |     use, intrinsic :: iso_c_binding
6 |     use, non_intrinsic :: iso_c_binding
7 |     use :: my_other_module
note: This is an unsafe fix and may change runtime behavior
