crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__multiple-allocations-with-stat_C182.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
---
./resources/test/fixtures/correctness/C182.f90:17:27: C182 'stat' parameter used with multiple allocations.
   |
16 |   ! stat params, combined in one statement
17 |   allocate (x(10), y(10), stat=status)
   |                           ----------- C182
18 |   deallocate (x, y, stat=status)
   |

./resources/test/fixtures/correctness/C182.f90:18:21: C182 'stat' parameter used with multiple deallocations.
   |
16 |   ! stat params, combined in one statement
17 |   allocate (x(10), y(10), stat=status)
18 |   deallocate (x, y, stat=status)
   |                     ----------- C182
19 |
20 | end program p
   |
