crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__no-real-suffix_C021.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C021 real literal 1.23456 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:13:30
   |
11 |   real(sp), parameter :: e = 1.0e10 ! Okay: No loss of precision, e exponent
12 |   real(sp), parameter :: f = -2E10 ! Okay: No loss of precision, E exponent
13 |   real(sp), parameter :: g = 1.23456 ! Bad: Loss of precision
   |                              ^^^^^^^
14 |   real(sp), parameter :: h = 1.23456e1 ! Bad: Loss of precision, e exponent
15 |   real(sp), parameter :: i = 1.23456E-1 ! Bad: Loss of precision, E exponent
   |

C021 real literal 1.23456e1 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:14:30
   |
12 |   real(sp), parameter :: f = -2E10 ! Okay: No loss of precision, E exponent
13 |   real(sp), parameter :: g = 1.23456 ! Bad: Loss of precision
14 |   real(sp), parameter :: h = 1.23456e1 ! Bad: Loss of precision, e exponent
   |                              ^^^^^^^^^
15 |   real(sp), parameter :: i = 1.23456E-1 ! Bad: Loss of precision, E exponent
16 |   real(dp), parameter :: j = -1.23456_dp ! Okay: Kind suffix
   |

C021 real literal 1.23456E-1 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:15:30
   |
13 |   real(sp), parameter :: g = 1.23456 ! Bad: Loss of precision
14 |   real(sp), parameter :: h = 1.23456e1 ! Bad: Loss of precision, e exponent
15 |   real(sp), parameter :: i = 1.23456E-1 ! Bad: Loss of precision, E exponent
   |                              ^^^^^^^^^^
16 |   real(dp), parameter :: j = -1.23456_dp ! Okay: Kind suffix
17 |   real(sp), parameter :: k = 1.23456_sp ! Okay: Loss of precision, but we're explicit
   |

C021 real literal 2e39 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:20:30
   |
18 |   real(dp), parameter :: l = 1.23456d1 ! Okay: Ignore d exponent
19 |   real(dp), parameter :: m = 1.23456D-3 ! Okay: Ignore D exponent
20 |   real(dp), parameter :: n = 2e39 ! Bad: Magnitude doesn't fit in single precision
   |                              ^^^^
21 |   real(dp), parameter :: o = -(+(-(((3.141592654))))) ! Bad: Loss of precision, horrible declaration
   |

C021 real literal 3.141592654 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:21:38
   |
19 |   real(dp), parameter :: m = 1.23456D-3 ! Okay: Ignore D exponent
20 |   real(dp), parameter :: n = 2e39 ! Bad: Magnitude doesn't fit in single precision
21 |   real(dp), parameter :: o = -(+(-(((3.141592654))))) ! Bad: Loss of precision, horrible declaration
   |                                      ^^^^^^^^^^^
22 |   
23 |   complex(dp), parameter :: ca = (0.0, 0.0) ! Okay: No loss of precision
   |

C021 real literal 4.0E-5 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:28:42
   |
26 |   complex(dp), parameter :: cd = (0.000244140625, 0.0) ! Okay: No loss of precision (=2^-12)
27 |   complex(sp), parameter :: ce = (1.0e10, 2.0e5) ! Okay: No loss of precision, e exponent
28 |   complex(sp), parameter :: cf = (2E10, -4.0E-5) ! Bad: Loss of precision, negative E exponent
   |                                          ^^^^^^
29 |   complex(sp), parameter :: cg = (1.23456, -0.0) ! Bad: Loss of precision
30 |   complex(sp), parameter :: ch = (0.0, 1.23456e1) ! Bad: Loss of precision, e exponent
   |

C021 real literal 1.23456 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:29:35
   |
27 |   complex(sp), parameter :: ce = (1.0e10, 2.0e5) ! Okay: No loss of precision, e exponent
28 |   complex(sp), parameter :: cf = (2E10, -4.0E-5) ! Bad: Loss of precision, negative E exponent
29 |   complex(sp), parameter :: cg = (1.23456, -0.0) ! Bad: Loss of precision
   |                                   ^^^^^^^
30 |   complex(sp), parameter :: ch = (0.0, 1.23456e1) ! Bad: Loss of precision, e exponent
31 |   complex(sp), parameter :: ci = (1.23456E1, 0.0) ! Bad: Loss of precision, E exponent
   |

C021 real literal 1.23456e1 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:30:40
   |
28 |   complex(sp), parameter :: cf = (2E10, -4.0E-5) ! Bad: Loss of precision, negative E exponent
29 |   complex(sp), parameter :: cg = (1.23456, -0.0) ! Bad: Loss of precision
30 |   complex(sp), parameter :: ch = (0.0, 1.23456e1) ! Bad: Loss of precision, e exponent
   |                                        ^^^^^^^^^
31 |   complex(sp), parameter :: ci = (1.23456E1, 0.0) ! Bad: Loss of precision, E exponent
32 |   complex(dp), parameter :: cj = (-1.23456_dp, 0.2_dp) ! Okay: Kind suffix
   |

C021 real literal 1.23456E1 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:31:35
   |
29 |   complex(sp), parameter :: cg = (1.23456, -0.0) ! Bad: Loss of precision
30 |   complex(sp), parameter :: ch = (0.0, 1.23456e1) ! Bad: Loss of precision, e exponent
31 |   complex(sp), parameter :: ci = (1.23456E1, 0.0) ! Bad: Loss of precision, E exponent
   |                                   ^^^^^^^^^
32 |   complex(dp), parameter :: cj = (-1.23456_dp, 0.2_dp) ! Okay: Kind suffix
33 |   complex(sp), parameter :: ck = (1.23456_sp, 3.14159265_sp)! Okay: Loss of precision, but we're explicit
   |

C021 real literal 2e39 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:36:35
   |
34 |   complex(dp), parameter :: cl = (1.23456d1, 37d2) ! Okay: Ignore d exponent
35 |   complex(dp), parameter :: cm = (1.23456D3, 37D2) ! Okay: Ignore D exponent
36 |   complex(dp), parameter :: cn = (2e39, 0e0) ! Bad: Magnitude doesn't fit in single precision
   |                                   ^^^^
37 |   real(dp), parameter :: co = -(+(-(-3.141592654, +5.182647))) ! Bad: Loss of precision, horrible declaration
   |

C021 real literal 3.141592654 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:37:38
   |
35 |   complex(dp), parameter :: cm = (1.23456D3, 37D2) ! Okay: Ignore D exponent
36 |   complex(dp), parameter :: cn = (2e39, 0e0) ! Bad: Magnitude doesn't fit in single precision
37 |   real(dp), parameter :: co = -(+(-(-3.141592654, +5.182647))) ! Bad: Loss of precision, horrible declaration
   |                                      ^^^^^^^^^^^
38 |
39 |   real(dp) :: p, q, x, y, z
   |

C021 real literal 5.182647 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:37:52
   |
35 |   complex(dp), parameter :: cm = (1.23456D3, 37D2) ! Okay: Ignore D exponent
36 |   complex(dp), parameter :: cn = (2e39, 0e0) ! Bad: Magnitude doesn't fit in single precision
37 |   real(dp), parameter :: co = -(+(-(-3.141592654, +5.182647))) ! Bad: Loss of precision, horrible declaration
   |                                                    ^^^^^^^^
38 |
39 |   real(dp) :: p, q, x, y, z
   |

C021 real literal 2.0 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:42:12
   |
40 |   complex(dp) :: cp, cq, cx, cy, cz
41 |
42 |   x = sqrt(2.0) ! Bad: Loss of precision
   |            ^^^
43 |   y = real(1.0, kind=dp) ! Okay: Type cast with no loss of precision
44 |   z = real(1.0 + 1.0, kind=dp) ! Bad: Type cast from expression, possible l.o.p
   |

C021 real literal 1.0 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:44:12
   |
42 |   x = sqrt(2.0) ! Bad: Loss of precision
43 |   y = real(1.0, kind=dp) ! Okay: Type cast with no loss of precision
44 |   z = real(1.0 + 1.0, kind=dp) ! Bad: Type cast from expression, possible l.o.p
   |            ^^^
45 |   p = real(-5.0, kind=dp) ! Okay: Type cast with no loss of precision
46 |   q = real(1.23456, kind=dp) ! Bad: Type cast with loss of precision
   |

C021 real literal 1.0 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:44:18
   |
42 |   x = sqrt(2.0) ! Bad: Loss of precision
43 |   y = real(1.0, kind=dp) ! Okay: Type cast with no loss of precision
44 |   z = real(1.0 + 1.0, kind=dp) ! Bad: Type cast from expression, possible l.o.p
   |                  ^^^
45 |   p = real(-5.0, kind=dp) ! Okay: Type cast with no loss of precision
46 |   q = real(1.23456, kind=dp) ! Bad: Type cast with loss of precision
   |

C021 real literal 1.23456 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:46:12
   |
44 |   z = real(1.0 + 1.0, kind=dp) ! Bad: Type cast from expression, possible l.o.p
45 |   p = real(-5.0, kind=dp) ! Okay: Type cast with no loss of precision
46 |   q = real(1.23456, kind=dp) ! Bad: Type cast with loss of precision
   |            ^^^^^^^
47 |   
48 |   cx = sqrt((2.0, 0.0)) ! Bad: Loss of precision
   |

C021 real literal 2.0 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:48:14
   |
46 |   q = real(1.23456, kind=dp) ! Bad: Type cast with loss of precision
47 |   
48 |   cx = sqrt((2.0, 0.0)) ! Bad: Loss of precision
   |              ^^^
49 |   cy = cmplx((1.0, 1.0), kind=dp) ! Okay: Type cast with no loss of precision
50 |   cz = cmplx((1.0, 0.0) + (0.0, 1.0), kind=dp) ! Bad: Type cast from expression, possible l.o.p
   |

C021 real literal 0.0 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:48:19
   |
46 |   q = real(1.23456, kind=dp) ! Bad: Type cast with loss of precision
47 |   
48 |   cx = sqrt((2.0, 0.0)) ! Bad: Loss of precision
   |                   ^^^
49 |   cy = cmplx((1.0, 1.0), kind=dp) ! Okay: Type cast with no loss of precision
50 |   cz = cmplx((1.0, 0.0) + (0.0, 1.0), kind=dp) ! Bad: Type cast from expression, possible l.o.p
   |

C021 real literal 1.0 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:50:15
   |
48 |   cx = sqrt((2.0, 0.0)) ! Bad: Loss of precision
49 |   cy = cmplx((1.0, 1.0), kind=dp) ! Okay: Type cast with no loss of precision
50 |   cz = cmplx((1.0, 0.0) + (0.0, 1.0), kind=dp) ! Bad: Type cast from expression, possible l.o.p
   |               ^^^
51 |   cp = cmplx((5.0, -0.0625), kind=dp) ! Okay: Type cast with no loss of precision
52 |   cq = cmplx((-1.23456, 3.141292654), kind=dp) ! Bad: Type cast with loss of precision
   |

C021 real literal 0.0 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:50:20
   |
48 |   cx = sqrt((2.0, 0.0)) ! Bad: Loss of precision
49 |   cy = cmplx((1.0, 1.0), kind=dp) ! Okay: Type cast with no loss of precision
50 |   cz = cmplx((1.0, 0.0) + (0.0, 1.0), kind=dp) ! Bad: Type cast from expression, possible l.o.p
   |                    ^^^
51 |   cp = cmplx((5.0, -0.0625), kind=dp) ! Okay: Type cast with no loss of precision
52 |   cq = cmplx((-1.23456, 3.141292654), kind=dp) ! Bad: Type cast with loss of precision
   |

C021 real literal 0.0 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:50:28
   |
48 |   cx = sqrt((2.0, 0.0)) ! Bad: Loss of precision
49 |   cy = cmplx((1.0, 1.0), kind=dp) ! Okay: Type cast with no loss of precision
50 |   cz = cmplx((1.0, 0.0) + (0.0, 1.0), kind=dp) ! Bad: Type cast from expression, possible l.o.p
   |                            ^^^
51 |   cp = cmplx((5.0, -0.0625), kind=dp) ! Okay: Type cast with no loss of precision
52 |   cq = cmplx((-1.23456, 3.141292654), kind=dp) ! Bad: Type cast with loss of precision
   |

C021 real literal 1.0 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:50:33
   |
48 |   cx = sqrt((2.0, 0.0)) ! Bad: Loss of precision
49 |   cy = cmplx((1.0, 1.0), kind=dp) ! Okay: Type cast with no loss of precision
50 |   cz = cmplx((1.0, 0.0) + (0.0, 1.0), kind=dp) ! Bad: Type cast from expression, possible l.o.p
   |                                 ^^^
51 |   cp = cmplx((5.0, -0.0625), kind=dp) ! Okay: Type cast with no loss of precision
52 |   cq = cmplx((-1.23456, 3.141292654), kind=dp) ! Bad: Type cast with loss of precision
   |

C021 real literal 1.23456 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:52:16
   |
50 |   cz = cmplx((1.0, 0.0) + (0.0, 1.0), kind=dp) ! Bad: Type cast from expression, possible l.o.p
51 |   cp = cmplx((5.0, -0.0625), kind=dp) ! Okay: Type cast with no loss of precision
52 |   cq = cmplx((-1.23456, 3.141292654), kind=dp) ! Bad: Type cast with loss of precision
   |                ^^^^^^^
53 | end program test
   |

C021 real literal 3.141292654 missing kind suffix
  --> ./resources/test/fixtures/correctness/C021.f90:52:25
   |
50 |   cz = cmplx((1.0, 0.0) + (0.0, 1.0), kind=dp) ! Bad: Type cast from expression, possible l.o.p
51 |   cp = cmplx((5.0, -0.0625), kind=dp) ! Okay: Type cast with no loss of precision
52 |   cq = cmplx((-1.23456, 3.141292654), kind=dp) ! Bad: Type cast with loss of precision
   |                         ^^^^^^^^^^^
53 | end program test
   |
