crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__nonportable-shortcircuit-inquiry_C161.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C161 variable inquiry `present(arg1)` and use in same logical expression
  --> ./resources/test/fixtures/correctness/C161.f90:13:29
   |
11 |     end if
12 |
13 |     if (present(arg1) .and. arg1 > 1) then
   |         -------------       ^^^^ `arg1` referenced here
   |         |
   |         Inquiry `present(arg1)` called here
14 |       bad = .true.
15 |     end if
   |

C161 variable inquiry `present(arg2)` and use in same logical expression
  --> ./resources/test/fixtures/correctness/C161.f90:21:35
   |
19 |     end if
20 |
21 |     if (present(arg2) .and. (size(arg2) > 4)) then
   |         -------------             ^^^^ `arg2` referenced here
   |         |
   |         Inquiry `present(arg2)` called here
22 |       bad = .true.
23 |     end if
   |

C161 variable inquiry `present(arg1)` and use in same logical expression
  --> ./resources/test/fixtures/correctness/C161.f90:33:40
   |
31 |     end if
32 |
33 |     if (present(arg1) .and. associated(arg1)) then
   |         -------------                  ^^^^ `arg1` referenced here
   |         |
   |         Inquiry `present(arg1)` called here
34 |       bad = .true.
35 |     end if
   |

C161 variable inquiry `associated(arg1)` and use in same logical expression
  --> ./resources/test/fixtures/correctness/C161.f90:33:17
   |
31 |     end if
32 |
33 |     if (present(arg1) .and. associated(arg1)) then
   |                 ^^^^        ---------------- Inquiry `associated(arg1)` called here
   |                 |
   |                 `arg1` referenced here
34 |       bad = .true.
35 |     end if
   |

C161 variable inquiry `associated(arg1)` and use in same logical expression
  --> ./resources/test/fixtures/correctness/C161.f90:42:32
   |
40 |     end if
41 |
42 |     if (associated(arg1) .and. arg1 > 1) then
   |         ----------------       ^^^^ `arg1` referenced here
   |         |
   |         Inquiry `associated(arg1)` called here
43 |       bad = .true.
44 |     end if
   |

C161 variable inquiry `present(arg2)` and use in same logical expression
  --> ./resources/test/fixtures/correctness/C161.f90:46:26
   |
44 |     end if
45 |
46 |     if ((.not. allocated(arg2)) .or. (.not. present(arg2))) then
   |                          ^^^^               ------------- Inquiry `present(arg2)` called here
   |                          |
   |                          `arg2` referenced here
47 |       bad = .true.
48 |     end if
   |

C161 variable inquiry `allocated(arg2)` and use in same logical expression
  --> ./resources/test/fixtures/correctness/C161.f90:46:53
   |
44 |     end if
45 |
46 |     if ((.not. allocated(arg2)) .or. (.not. present(arg2))) then
   |                ---------------                      ^^^^ `arg2` referenced here
   |                |
   |                Inquiry `allocated(arg2)` called here
47 |       bad = .true.
48 |     end if
   |

C161 variable inquiry `allocated(arg2)` and use in same logical expression
  --> ./resources/test/fixtures/correctness/C161.f90:50:36
   |
48 |     end if
49 |
50 |     if (allocated(arg2) .and. size(arg2) > 1) then
   |         ---------------            ^^^^ `arg2` referenced here
   |         |
   |         Inquiry `allocated(arg2)` called here
51 |       bad = .true.
52 |     end if
   |
