crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__pointer-initialisation-in-declaration_C082.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C082 Pointer 'foo' is initialized in its declaration and has no explicit `save` attribute
  --> ./resources/test/fixtures/correctness/C082.f90:10:25
   |
 9 |   subroutine init_decl1()
10 |     integer, pointer :: foo => null()
   |                         ^^^^^^^^^^^^^
11 |   end subroutine init_decl1
   |

C082 Pointer 'foo' is initialized in its declaration and has no explicit `save` attribute
  --> ./resources/test/fixtures/correctness/C082.f90:14:25
   |
13 |   subroutine init_decl2()
14 |     integer, pointer :: foo(:) => null()  ! Not ok
   |                         ^^^^^^^^^^^^^^^^
15 |     integer, pointer, dimension(:) :: foo1 => null()  ! Not ok
16 |     integer, pointer, save :: bar => null()  ! Ok with explicit save
   |

C082 Pointer 'foo1' is initialized in its declaration and has no explicit `save` attribute
  --> ./resources/test/fixtures/correctness/C082.f90:15:39
   |
13 |   subroutine init_decl2()
14 |     integer, pointer :: foo(:) => null()  ! Not ok
15 |     integer, pointer, dimension(:) :: foo1 => null()  ! Not ok
   |                                       ^^^^^^^^^^^^^^
16 |     integer, pointer, save :: bar => null()  ! Ok with explicit save
17 |   end subroutine init_decl2
   |

C082 Pointer 'bar' is initialized in its declaration and has no explicit `save` attribute
  --> ./resources/test/fixtures/correctness/C082.f90:20:30
   |
19 |   subroutine init_decl3()
20 |     integer, pointer :: foo, bar(:) => null(), quazz(:), zapp => null()
   |                              ^^^^^^^^^^^^^^^^
21 |   end subroutine init_decl3
   |

C082 Pointer 'zapp' is initialized in its declaration and has no explicit `save` attribute
  --> ./resources/test/fixtures/correctness/C082.f90:20:58
   |
19 |   subroutine init_decl3()
20 |     integer, pointer :: foo, bar(:) => null(), quazz(:), zapp => null()
   |                                                          ^^^^^^^^^^^^^^
21 |   end subroutine init_decl3
   |
