crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__procedure-not-in-module_C092.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
---
./resources/test/fixtures/correctness/C092.f90:1:1: C092 function not contained within (sub)module or program
  |
1 | integer function double(x)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ C092
2 |   integer, intent(in) :: x
3 |   double = 2 * x
4 | end function double
  |

./resources/test/fixtures/correctness/C092.f90:6:1: C092 subroutine not contained within (sub)module or program
  |
4 | end function double
5 |
6 | subroutine triple(x)
  | ^^^^^^^^^^^^^^^^^^^^ C092
7 |   integer, intent(inout) :: x
8 |   x = 3 * x
9 | end subroutine triple
  |
