crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__shadowed-variable_C201_shadowed_variable.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
---
./resources/test/fixtures/correctness/C201_shadowed_variable.f90:12:26: C201 Variable `x` shadows variable in a higher scope
   |
10 |   subroutine initialise(n)
11 |     integer, intent(in) :: n
12 |     real, allocatable :: x(:)  ! This is a bug!
   |                          ^ C201
13 |
14 |     allocate(x(n))
   |
