crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__shadowed-variable_strict_C201_shadowed_variable.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
---
./resources/test/fixtures/correctness/C201_shadowed_variable.f90:14:26: C201 Variable `x` shadows variable in a higher scope
   |
12 |   subroutine initialise(n)
13 |     integer, intent(in) :: n
14 |     real, allocatable :: x(:)  ! This is a bug!
   |                          ^ C201
15 |     real :: real32 ! This is a bug!
   |

./resources/test/fixtures/correctness/C201_shadowed_variable.f90:15:13: C201 Variable `real32` shadows variable in a higher scope
   |
13 |     integer, intent(in) :: n
14 |     real, allocatable :: x(:)  ! This is a bug!
15 |     real :: real32 ! This is a bug!
   |             ^^^^^^ C201
16 |
17 |     allocate(x(n))
   |

./resources/test/fixtures/correctness/C201_shadowed_variable.f90:33:30: C201 Variable `arr` shadows variable in a higher scope
   |
31 |     !! Finds minimum element of an array, swaps it with the start
32 |     subroutine helper(arr)
33 |       real, intent(inout) :: arr(:) ! Allowed: is a dummy arg
   |                              ^^^ C201
34 |       real :: min_val
35 |       integer :: min_idx
   |

./resources/test/fixtures/correctness/C201_shadowed_variable.f90:36:18: C201 Variable `i` shadows variable in a higher scope
   |
34 |       real :: min_val
35 |       integer :: min_idx
36 |       integer :: i  ! Allowed: is a loop variable
   |                  ^ C201
37 |
38 |       min_val = arr(1)
   |
