crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__shadowed-variable_whitelist_C201_shadowed_variable.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
---
./resources/test/fixtures/correctness/C201_shadowed_variable.f90:15:13: C201 Variable `real32` shadows variable in a higher scope
   |
13 |     integer, intent(in) :: n
14 |     real, allocatable :: x(:)  ! This is a bug!
15 |     real :: real32 ! This is a bug!
   |             ^^^^^^ C201
16 |
17 |     allocate(x(n))
   |

./resources/test/fixtures/correctness/C201_shadowed_variable.f90:37:18: C201 Variable `i` shadows variable in a higher scope
   |
35 |       real :: min_val
36 |       integer :: min_idx
37 |       integer :: i  ! Allowed: is a loop variable
   |                  ^ C201
38 |
39 |       min_val = arr(1)
   |
